--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(196, 196, 196);
+    background-image: linear-gradient(to bottom, #4b4b4c, #5b5b5b, #6b6b6b, #7b7b7b, #8c8c8c);
 }
 
 .switch {
-    background-color: red;
+    background-image: linear-gradient(to top, #06064a, #161566, #262484, #3533a3, #4444c4);
 }
 
 #wrapper {
@@ -154,6 +154,7 @@ header {
 
 #banner {
     text-align: center;
+    background: url('../img/banner.jpg') center/cover no-repeat;
 }
 
 
