--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@
     box-sizing: border-box;
 }
 
-html,
-body {
+html,body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -25,20 +24,11 @@ body {
     margin: auto;
 }
 
-h1,
-h2,
-h3 {
+h1,h2,h3 {
     font-family: 'Baloo Thambi 2', cursive;
 }
 
-h1,
-h2,
-h3,
-.uppercase,
-#main-nav a,
-#gallery-nav a,
-.button,
-label {
+h1,h2,h3,.uppercase,#main-nav a,#gallery-nav a,.button,label {
     text-transform: uppercase;
 }
 
@@ -65,9 +55,7 @@ a {
     padding: 3.5em 13em;
 }
 
-#banner,
-#purchase,
-#footer-links {
+#banner,#purchase,#footer-links {
     background-color: black;
     color: white;
     height: max-content;
@@ -89,24 +77,14 @@ a {
     background-color: var(--theme);
 }
 
-#about,
-#gallery-nav,
-#testimonials,
-#contact {
+#about,#gallery-nav,#testimonials,#contact {
     background-color: #fff;
 }
 
-#banner .button,
-#purchase .button,
-#footer-links .button {
+#banner .button,#purchase .button,#footer-links .button {
     color: white;
     border: 2px solid var(--theme);
     display: inline-block;
-}
-
-.theme-button {
-    color: white;
-    font-weight: bold;
 }
 
 .separator {
@@ -135,11 +113,6 @@ a {
     padding: 0.3em 0.5em;
 }
 
-.tint-switch {
-    border: 2px solid black;
-    color: black;
-}
-
 
 /* NAVIGATION */
 
@@ -157,14 +130,56 @@ header {
     color: white;
 }
 
+.navbar {
+    display: none;
+}
+
+aside {
+    position: fixed;
+    background-image: linear-gradient(to bottom, #4b4b4c, #5b5b5b, #6b6b6b, #7b7b7b, #8c8c8c);
+    width: 100%;
+    height: 100vh;
+    left: -100%;
+    top: 0;
+    z-index: 10;
+    transition: 1s;
+    box-shadow: 0 0 10px #000;
+}
+
+aside ul {
+    margin: 0;
+    padding: 0;
+}
+
+aside li {
+    list-style: none;
+    text-align: center;
+}
+
+aside li a {
+    display: block;
+    padding: 15px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 3em;
+    transition: 0.3s;
+}
+
+aside li a:hover {
+    background: #6a848d;
+    text-decoration: underline;
+}
+
+.down {
+    left: 0;
+}
 
 /* BANNER */
 
 #banner {
     text-align: center;
-    background: url('../img/banner.jpg') center/cover no-repeat;
+    background: url(../img/banner.jpg) center/cover no-repeat;
 }
-
 
 /* ABOUT US */
 
@@ -181,9 +196,7 @@ header {
     cursor: pointer;
 }
 
-.fa-cog,
-.fa-wordpress,
-.fa-paper-plane {
+.fa-cog,.fa-wordpress,.fa-paper-plane {
     font-size: 2em;
     margin-right: 0.4em;
 }
@@ -316,7 +329,6 @@ header {
     border-bottom: 1px solid rgba(158, 158, 158, 0.342);
     justify-content: flex-start;
     padding: 1em 2em;
-    accordion
 }
 
 .comment:last-of-type {
@@ -397,8 +409,7 @@ header {
 
 /* FOOTER */
 
-footer p,
-#footer-nav a {
+footer p,#footer-nav a {
     font-size: 0.8em;
 }
 
@@ -439,8 +450,7 @@ footer p,
     justify-content: space-between;
 }
 
-#footer-nav p,
-#footer-nav a {
+#footer-nav p,#footer-nav a {
     color: white;
 }
 
@@ -466,4 +476,117 @@ footer p,
 
 #page-up i {
     padding: 5px 7px;
+}
+
+@media screen and (max-width: 930px) {
+    #main-nav {
+        display: none;
+    }
+    
+    ul, li {
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    .icon-menu {
+        color: white;
+        font-size: 2em;
+        cursor: pointer;
+    }
+
+    .navbar {
+        display: block;
+    }
+
+    #about>* {
+        text-align: center;
+    }
+
+    #about {
+        flex-direction: column;
+    }
+
+    #about article {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    #gallery figure {
+        width: 50%;
+        height: 250px;
+    }
+    .short-padding {
+        padding: 0.3em 3em;
+    }
+    .huge-padding {
+        padding: 1.3em 5em;
+    }
+    #theme-switch {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .short-padding {
+        padding: 0.1em 1.5em;
+    }
+    .huge-padding {
+        padding: 0.7em 2em;
+    }
+    #contact form {
+        flex-direction: column;
+    }
+    #contact form div {
+        max-width: 100%;
+    }
+    #footer-links {
+        flex-direction: column;
+    }
+    #footer-links div {
+        max-width: 100%;
+    }
+    #footer-links>* {
+        text-align: center;
+    }
+    #footer-links .separator {
+        margin: auto;
+    }
+    #footer-links form input {
+        width: 50%;
+        margin: 1em auto;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    #gallery figure {
+        width: 100%;
+        height: 300px;
+    }
+    .comment {
+        flex-direction: column;
+    }
+    .comment i {
+        font-size: 3em;
+    }
+    .italic {
+        text-align: justify;
+    }
+    #testimonials>div.comment:nth-child(even) {
+        flex-direction: column;
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #gallery-nav {
+        flex-direction: column;
+    }
+    #gallery-nav .button,#purchase .button {
+        margin-bottom: 1em;
+    }
+    #contact button {
+        display: block;
+        margin: 1em auto 0 auto;
+    }
 }
